--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src"],
+  "include": ["src", "typings/*"],
   "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js"]
 }
