chore: update package info

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-animate-scroll-example",
-  "homepage": "https://noahjohn9259.github.io/react-animate-scroll",
+  "homepage": "https://geminstall23.github.io/react-animate-scroll",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
