--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-animate-scroll",
   "version": "1.0.13",
   "description": "A scroll component that animates elements when user scrolls downwards.",
-  "author": "noahjohn9259",
+  "author": "geminstall23",
   "license": "MIT",
-  "repository": "noahjohn9259/react-animate-scroll",
+  "repository": "geminstall23/react-animate-scroll",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
